--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <h1 style="text-align: center;">Dimitrije Tasić</h1>
-    <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto;">
+    <h1 class="display-1" style="text-align: center;">Dimitrije Tasić</h1>
+    <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto; margin: 2rem;">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
