--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -9,6 +9,7 @@
   <body style="background-color: lightblue;">
     <h1 class="display-1" style="text-align: center;">Dimitrije Tasić</h1>
     <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto; margin: 2rem;">
+    <h1 class="display-1" style="text-align: center;">Interesovanja</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
