--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -11,6 +11,7 @@
     <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto; margin: 2rem;">
     <h1 class="display-1" style="text-align: center;">Interesovanja</h1>
     <p class="lead" style="margin: 2rem;">Moja glavna interesovanja su sport (Najviše košarka i fudbal) i video igre. Od malih nogu sam zavoleo i jedno i drugo jer su obadva zabavna i takmičarski nastrojena. Više sam zainteresovan za video igre pošto nisam mnogo vešt u sportu i voleo bih da jednog dana radim kao game developer. Iako nisam toliko talentovan za sportove i dalje volim da se njima bavim rekreativno kao i da pratim sportska dešavanja.</p>
+    <h1 class="display-1" style="text-align: center;">Postignuća</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
