--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -12,6 +12,7 @@
     <h1 class="display-1" style="text-align: center;">Interesovanja</h1>
     <p class="lead" style="margin: 2rem;">Moja glavna interesovanja su sport (Najviše košarka i fudbal) i video igre. Od malih nogu sam zavoleo i jedno i drugo jer su obadva zabavna i takmičarski nastrojena. Više sam zainteresovan za video igre pošto nisam mnogo vešt u sportu i voleo bih da jednog dana radim kao game developer. Iako nisam toliko talentovan za sportove i dalje volim da se njima bavim rekreativno kao i da pratim sportska dešavanja.</p>
     <h1 class="display-1" style="text-align: center;">Postignuća</h1>
+    <p class="lead" style="margin: 2rem;">Moja glavna postignuća su bila u osnovnoj školi kada sam učestvovao na raznim takmičenjima iz: fizike, matematike, hemije, biologije, srpskog i engleskog jezika. Medju ovim postignućima, najviše se ističu: Učešće na državnom takmičenju iz fizike u šestom razredu,učešće na državnom takmičenju iz hemije u sedmom razredu kao i kvalifikovanje na državno takmičenje iz engleskog jezika u osmom razredu koke je nažalost bilo odloženo zbog pandemije virusa covid-19.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
