--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -14,6 +14,7 @@
     <h1 class="display-1" style="text-align: center;">Postignuća</h1>
     <p class="lead" style="margin: 2rem;">Moja glavna postignuća su bila u osnovnoj školi kada sam učestvovao na raznim takmičenjima iz: fizike, matematike, hemije, biologije, srpskog i engleskog jezika. Medju ovim postignućima, najviše se ističu: Učešće na državnom takmičenju iz fizike u šestom razredu,učešće na državnom takmičenju iz hemije u sedmom razredu kao i kvalifikovanje na državno takmičenje iz engleskog jezika u osmom razredu koke je nažalost bilo odloženo zbog pandemije virusa covid-19.</p>
     <h1 class="display-1" style="text-align: center;">Aspiracije</h1>
+    <p class="lead" style="margin: 2rem;">Moje najveće aspiracije su završavanje što boljeg fakulteta i kasnije zapošljavanje u poslu koji volim i za koji bih bio dobro plaćen. Želim da radim u sferi programiranja, najviše u gejming industriji bilo samostalno ili u kao član tima game developera.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
