--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -7,16 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body style="background-color: lightblue;">
-    <nav class="navbar navbar-light bg-primary fixed-top">  
+    <nav class="navbar navbar-light bg-primary fixed-top"> 
       <a class="nav-link display-1 fw-bold" href="#home" style="margin-left: 1rem; margin-right: 1rem;">
         Home
-      </a> 
+      </a>      
+      <a class="nav-link" href="#Interesovanja" style="margin-left: 1rem; margin-right: 1rem;">
+        Interesovanja
+      </a>
     </nav>
     <h1 class="display-1 fw-bold" style="text-align: center; color: red; margin-top: 2rem;" id="home">Dimitrije Tasić</h1>
     <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto; margin: 2rem;">
-    <h1 class="display-1 fw-bold" style="text-align: center; color: red;">Interesovanja</h1>
+    <h1 class="display-1 fw-bold" style="text-align: center; color: red;" id="Interesovanja">Interesovanja</h1>
     <p class="lead fst-italic" style="margin: 2rem;">Moja glavna interesovanja su sport (Najviše košarka i fudbal) i video igre. Od malih nogu sam zavoleo i jedno i drugo jer su obadva zabavna i takmičarski nastrojena. Više sam zainteresovan za video igre pošto nisam mnogo vešt u sportu i voleo bih da jednog dana radim kao game developer. Iako nisam toliko talentovan za sportove i dalje volim da se njima bavim rekreativno kao i da pratim sportska dešavanja.</p>
-    <h1 class="display-1 fw-bold" style="text-align: center; color: red;">Postignuća</h1> 
+    <h1 class="display-1 fw-bold" style="text-align: center; color: red;" id="Postignuća">Postignuća</h1> 
     <p class="lead fst-italic" style="margin: 2rem;">Moja glavna postignuća su bila u osnovnoj školi kada sam učestvovao na raznim takmičenjima iz: fizike, matematike, hemije, biologije, srpskog i engleskog jezika. Medju ovim postignućima, najviše se ističu: Učešće na državnom takmičenju iz fizike u šestom razredu,učešće na državnom takmičenju iz hemije u sedmom razredu kao i kvalifikovanje na državno takmičenje iz engleskog jezika u osmom razredu koke je nažalost bilo odloženo zbog pandemije virusa covid-19.</p>
     <h1 class="display-1 fw-bold" style="text-align: center; color: red;">Aspiracije</h1>
     <p class="lead fst-italic" style="margin: 2rem;">Moje najveće aspiracije su završavanje što boljeg fakulteta i kasnije zapošljavanje u poslu koji volim i za koji bih bio dobro plaćen. Želim da radim u sferi programiranja, najviše u gejming industriji bilo samostalno ili u kao član tima game developera.</p>
