Dodao sekciju za postignuća u navbar

--- a/Dimitrije Tasic Portfolio.html
+++ b/Dimitrije Tasic Portfolio.html
@@ -14,6 +14,9 @@
       <a class="nav-link" href="#Interesovanja" style="margin-left: 1rem; margin-right: 1rem;">
         Interesovanja
       </a>
+      <a class="nav-link" href="#Postignuća" style="margin-left: 1rem; margin-right: 1rem;">
+        Postignuća
+      </a>  
     </nav>
     <h1 class="display-1 fw-bold" style="text-align: center; color: red; margin-top: 2rem;" id="home">Dimitrije Tasić</h1>
     <img src="Dimitrije Tasic Slika.png" style="width: 250px; height: auto; margin: 2rem;">
